// Copyright 2023 Ant Group Co., Ltd.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package secretflow.serving;

// Serving log level
enum LogLevel {
  // Placeholder for proto3 default value, do not use it.
  INVALID_LOG_LEVEL = 0;

  // debug
  DEBUG_LOG_LEVEL = 1;
  // info
  INFO_LOG_LEVEL = 2;
  // warn
  WARN_LOG_LEVEL = 3;
  // error
  ERROR_LOG_LEVEL = 4;
}

// Serving log config options
message LoggingConfig {
  // system log
  // default value: "serving.log"
  string system_log_path = 1;
  // default value: LogLevel.INFO_LOG_LEVEL
  LogLevel log_level = 2;
  // Byte. default value: 500 * 1024 * 1024 (500MB)
  int32 max_log_file_size = 3;
  // default value: 10
  int32 max_log_file_count = 4;
}
